@@ -1,0 +1,9 @@
+// This include will allow us to avoid reincluding other headers
+#include "irx_imports.h"
+
+// Maybe we have important typedefs here!
+#include "hello.h"
+
+void hello(void) {
+    printf("Hello world!\n");
+}
